# AwEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: color.cmake  enableWarnings.cmake  externalDeps.cmake  glm.cmake  loadDependency.cmake
include/aw/: config.hpp
include/aw/ecs/: componentStorage.hpp  entity.hpp  nameResolver.hpp  prefab.hpp  sparseSet.hpp  systemGroup.hpp  view.hpp  world.hpp
include/aw/engine/: engine.hpp  performance.hpp  state.hpp  stateMachine.hpp  window.hpp  windowSettings.hpp
include/aw/engine/particleSystem/: renderer.hpp  spawner.hpp  spawner.serialize.hpp  system.hpp
include/aw/graphics/core/: gpuHandle.hpp  renderContext.hpp  shaderStage.hpp
include/aw/graphics/opengl/: error.hpp  gl.hpp  shader.hpp
include/aw/util/: log.hpp
include/aw/util/color/: color.hpp  colors.hpp
include/aw/util/file/: convert.hpp  inputStream.hpp
include/aw/util/filesystem/: convert.hpp  fileStream.hpp  filesystem.hpp  pathRegistry.hpp
include/aw/util/math/: constants.hpp  matrix.hpp  quat.hpp  transform.hpp  vector.hpp
include/aw/util/message/: bus.hpp  channel.hpp  subsriber.hpp
include/aw/util/messageBus/: channel.hpp  messageBus.hpp  subscriber.hpp
include/aw/util/random/: distributions.hpp
include/aw/util/serialization/: glm.hpp  serialze.hpp  string.hpp
include/aw/util/serialization/types/: random.hpp  vector.hpp
include/aw/util/signal/: signal.hpp
include/aw/util/spatial/: bBox.hpp  octree.hpp  plane.hpp  sphere.hpp
include/aw/util/spatial/intersectors/: bBox.hpp  triangle.hpp  triangleTest.hpp
include/aw/util/time/: clock.hpp  gameClock.hpp  time.hpp
include/aw/util/type/: staticFor.hpp  typeCounter.hpp  visitor.hpp
src/aw/ecs/: CMakeLists.txt  systemGroup.cpp  world.cpp
src/aw/engine/: CMakeLists.txt  engine.cpp  performance.cpp  state.cpp  stateMachine.cpp  window.cpp
src/aw/engine/particleSystem/: renderer.cpp  system.cpp
src/aw/graphics/: CMakeLists.txt
src/aw/graphics/opengl/: error.cpp  shader.cpp
src/aw/util/: CMakeLists.txt  log.cpp
src/aw/util/file/: convert.cpp  inputStream.cpp
src/aw/util/filesystem/: convert.cpp  fileStream.cpp  pathRegistry.cpp
src/aw/util/math/: transform.cpp  vector.cpp
src/aw/util/time/: clock.cpp
tests/: doctest.h
tests/ecs/: test_componentStorage.cpp  test_systems.cpp  test_view.cpp  test_world.cpp
